<resources>
    <string name="app_name">FragmentApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="nama_pendidikan">Sekolah</string>
    <string name="dekripsi">Deskripsi</string>
    <string name="nama_sd">SD Dharma Karya UT</string>
    <string name="nama_smp">SMP Negeri 17 Tangerang Selatan</string>
    <string name="nama_sma">SMA Negeri 3 Purwokerto</string>
    <string name="nama_kul">Institut Teknologi Telkom PurwokertoT</string>
    <string name="desc_sd">2005 - 2011</string>
    <string name="desc_smp">2011 - 2014</string>
    <string name="desc_sma">2014 - 2017</string>
    <string name="desc_kul">2017 - NOW</string>
    <string name="poto_sd">https://sekolahpromo.com/uploads/sekolah/logo/kd_20150407120521_43205_smadharmakarya.png</string>
    <string name="poto_smp">https://pbs.twimg.com/profile_images/472277419387142144/Kc1vdxGe.jpeg</string>
</resources>